Decode 26.1.2 recipes with stack templates