@@ -6,9 +6,9 @@ import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.network.RegistryFriendlyByteBuf;
 import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.resources.Identifier;
-import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.ItemStackTemplate;
 import net.minecraft.world.item.crafting.RecipeSerializer;
-import net.neoforged.neoforge.fluids.FluidStack;
+import net.neoforged.neoforge.fluids.FluidStackTemplate;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.Arrays;
@@ -19,12 +19,12 @@ public class RecipeSerializerFactory<T extends ModRecipe<T> & RecipeFactory<T>> 
             Identifier.fromNamespaceAndPath("nstutlib", "codec_decoded_recipe");
 
     private static final MapCodec<IngredientItem> INGREDIENT_ITEM_CODEC = RecordCodecBuilder.mapCodec(instance -> instance.group(
-            ItemStack.CODEC.fieldOf("itemStack").forGetter(IngredientItem::getItemStack),
+            ItemStackTemplate.CODEC.fieldOf("itemStack").forGetter(IngredientItem::getItemStackTemplate),
             Codec.BOOL.optionalFieldOf("isConsumable", false).forGetter(IngredientItem::isConsumable)
     ).apply(instance, IngredientItem::new));
 
     private static final MapCodec<OutputItem> OUTPUT_ITEM_CODEC = RecordCodecBuilder.mapCodec(instance -> instance.group(
-            ItemStack.CODEC.fieldOf("itemStack").forGetter(OutputItem::getItemStack),
+            ItemStackTemplate.CODEC.fieldOf("itemStack").forGetter(OutputItem::getItemStackTemplate),
             Codec.FLOAT.optionalFieldOf("chance", 1.0f).forGetter(OutputItem::getChance)
     ).apply(instance, OutputItem::new));
 
@@ -33,17 +33,17 @@ public class RecipeSerializerFactory<T extends ModRecipe<T> & RecipeFactory<T>> 
                     .forGetter(data -> Arrays.asList(data.getIngredientItems())),
             OUTPUT_ITEM_CODEC.codec().listOf().optionalFieldOf("itemOutputs", List.of())
                     .forGetter(data -> Arrays.asList(data.getOutputItems())),
-            FluidStack.CODEC.listOf().optionalFieldOf("fluidInputs", List.of())
-                    .forGetter(data -> Arrays.asList(data.getFluidIngredients())),
-            FluidStack.CODEC.listOf().optionalFieldOf("fluidOutputs", List.of())
-                    .forGetter(data -> Arrays.asList(data.getFluidOutputs())),
+            FluidStackTemplate.CODEC.listOf().optionalFieldOf("fluidInputs", List.of())
+                    .forGetter(data -> Arrays.asList(data.getFluidIngredientTemplates())),
+            FluidStackTemplate.CODEC.listOf().optionalFieldOf("fluidOutputs", List.of())
+                    .forGetter(data -> Arrays.asList(data.getFluidOutputTemplates())),
             Codec.INT.optionalFieldOf("energy", 0).forGetter(ModRecipeData::getTotalEnergy)
     ).apply(instance, (itemInputs, itemOutputs, fluidInputs, fluidOutputs, energy) -> {
         ModRecipeData data = new ModRecipeData(
                 itemInputs.toArray(IngredientItem[]::new),
                 itemOutputs.toArray(OutputItem[]::new),
-                fluidInputs.toArray(FluidStack[]::new),
-                fluidOutputs.toArray(FluidStack[]::new),
+                fluidInputs.toArray(FluidStackTemplate[]::new),
+                fluidOutputs.toArray(FluidStackTemplate[]::new),
                 energy);
         validate(data, "decoded recipe");
         return data;
@@ -75,25 +75,27 @@ public class RecipeSerializerFactory<T extends ModRecipe<T> & RecipeFactory<T>> 
     private static void validate(ModRecipeData data, String recipeId) {
         if (data.getTotalEnergy() < 0) throw new IllegalArgumentException(recipeId + " has negative energy");
         for (IngredientItem input : data.getIngredientItems()) {
-            if (input == null || input.getItemStack().isEmpty() || input.getItemStack().getCount() <= 0) {
+            ItemStackTemplate template = input == null ? null : input.getItemStackTemplate();
+            if (template == null || template.count() <= 0) {
                 throw new IllegalArgumentException(recipeId + " has an invalid item input");
             }
         }
         for (OutputItem output : data.getOutputItems()) {
-            if (output == null || output.getItemStack().isEmpty() || output.getItemStack().getCount() <= 0) {
+            ItemStackTemplate template = output == null ? null : output.getItemStackTemplate();
+            if (template == null || template.count() <= 0) {
                 throw new IllegalArgumentException(recipeId + " has an invalid item output");
             }
             if (!Float.isFinite(output.getChance()) || output.getChance() < 0.0f || output.getChance() > 1.0f) {
                 throw new IllegalArgumentException(recipeId + " has an invalid output chance " + output.getChance());
             }
         }
-        for (FluidStack fluid : data.getFluidIngredients()) {
-            if (fluid == null || fluid.isEmpty() || fluid.getAmount() <= 0) {
+        for (FluidStackTemplate fluid : data.getFluidIngredientTemplates()) {
+            if (fluid == null || fluid.amount() <= 0) {
                 throw new IllegalArgumentException(recipeId + " has an invalid fluid input");
             }
         }
-        for (FluidStack fluid : data.getFluidOutputs()) {
-            if (fluid == null || fluid.isEmpty() || fluid.getAmount() <= 0) {
+        for (FluidStackTemplate fluid : data.getFluidOutputTemplates()) {
+            if (fluid == null || fluid.amount() <= 0) {
                 throw new IllegalArgumentException(recipeId + " has an invalid fluid output");
             }
         }
